# rocPyDecode

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  __init__.py  build_rocpydecode_wheel.py  get_rocdecode_wheelname.py  pyproject.toml  rocPyDecode-docker-install.py  rocPyDecode-requirements.py  setup.py
.azuredevops/: rocm-ci.yml
.github/: CODEOWNERS
.jenkins/: common.groovy  precheckin.groovy
amd/: __init__.py  __init__.pyi
amd/rocdecode/: __init__.py  decoder.py  demuxer.py  types.py
amd/rocpydecode/: types.py
cmake/: Findpybind11.cmake  FindrocDecode.cmake
conda-recipe/: README.md  build_conda_package.sh  meta.yaml
docs/: conf.py  index.rst  what-is-rocPyDecode.rst
docs/api/: deCoderClass.rst
docs/how-to/: using-rocPydecode.rst
docs/install/: install.rst
docs/reference/: deCoderClass.rst  deMuxerClass.rst  decoderClass.rst  demuxerClass.rst  rocPyDecode.rst  structures.rst
docs/sphinx/: _toc.yml.in  requirements.txt
examples/: pyExample.py  py_videodecode.py
inc/: roc_pydecode.h  roc_pyvideodecode.h  roc_pyvideodemuxer.h
pyDecode/: __init__.pyi  decoder.py  demuxer.py  types.py
pyRocVideoDecode/: __init__.pyi  catlabels.py  decoder.py  demuxer.py  types.py
rocCodec/: __init__.pyi  decoder.py  demuxer.py
rocPyDecode.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rocdecode/: __init__.py  __init__.pyi  types.py
samples/: CMakeLists.txt  README.md  py_videodecode.py  videodecode.py  videodecodeTorch.py  videodecode_mpi.py  videodecodemem.py  videodecodeperf.py  videodecodergb.py  videodecodetorch.py  videodecodetorch_resnet50.py  videodecodetorch_yuv.py  videodemux.py
source/: rocPyDecode.cpp  rocPyVideoDecode.cpp  rocPyVideoDecode.h  rocPyVideoDemuxer.cpp  rocPyVideoDemuxer.h  roc_pydecode.cpp  roc_pyvideodecode.cpp  roc_pyvideodecode.h  roc_pyvideodemuxer.cpp  roc_pyvideodemuxer.h
src/: CMakeLists.txt  DLPackUtils.cpp  DLPackUtils.h  ExternalBuffer.cpp  ExternalBuffer.h  roc_pybuffer.cpp  roc_pybuffer.h  roc_pycolorconversion.cpp  roc_pycolorconversion.h  roc_pydecode.cpp  roc_pydecode.h  roc_pydlpack.cpp  roc_pydlpack.h  roc_pygpualloc.cpp  roc_pygpualloc.h  roc_pyresizeframe.cpp  roc_pyresizeframe.h  roc_pyvideodecode.cpp  roc_pyvideodecode.h  roc_pyvideodemuxer.cpp  roc_pyvideodemuxer.h
